<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.board.BoardActivity">

    <Button
        android:id="@+id/btSaveBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_board"
        app:layout_constraintEnd_toStartOf="@+id/btDeleteBoard"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/TrelloLight.ButtonAppearance"
        />

    <Button
        android:id="@+id/btDeleteBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/btAddCard"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btSaveBoard"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/delete"
        style="@style/TrelloLight.ButtonAppearance"
        />

    <Button
        android:id="@+id/btAddCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btDeleteBoard"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/add_card"
        style="@style/TrelloLight.ButtonAppearance"
        />

    <LinearLayout
        android:id="@+id/boardLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btDeleteBoard"
        >

        <EditText
            android:id="@+id/etBoardName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/board_title_hint"
            style="@style/TrelloLight.EditTextAppearance"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvBoard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TrelloLight.RecyclerViewAppearance"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>